# pythonisms

./: .gitignore  README.md  pyproject.toml
pythonic/: pythonic.py
tests/: test_pythonic.py
